--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        
+        <div class="card">
+            <div class="search">
+                <input type="text" placeholder="Enter city name" spellcheck="false">
+                <button 
+            </div>
+        </div>
     </body>
 </html>
