--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div class="card">
             <div class="search">
                 <input type="text" placeholder="Enter city name" spellcheck="false">
-                <button 
+                <button> <img src="images/search.png"></button> 
             </div>
         </div>
     </body>
