--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
                 <input type="text" placeholder="Enter city name" spellcheck="false">
                 <button> <img src="images/search.png"></button> 
             </div>
+            <div class="weather">
+                
+            </div>
         </div>
     </body>
 </html>
