--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
                 <button> <img src="images/search.png"></button> 
             </div>
             <div class="weather">
+                <img src="images/clear.png" class="weather-icon">
+                <h1 class="temp">46°F</h1>
+                <h2 class="city">Paso Robles</h2>
+                <div class="details">
+                    <img src="" alt="">
+                </div>
                 
             </div>
         </div>
