Creating placeholder for the information

--- a/index.html
+++ b/index.html
@@ -16,9 +16,17 @@
                 <h1 class="temp">46°F</h1>
                 <h2 class="city">Paso Robles</h2>
                 <div class="details">
-                    <img src="" alt="">
+                    <div class="col">
+                    <img src="/images/humidity.png">
+                    <p class="humidity">50%</p>
+                    <p>Humidity</p>
+                    </div>
+                    <div class="col">
+                        <img src="/images/windspeed.png">
+                        <p class="wind">10 mph</p>
+                        <p>Wind Speed</p>
+                        </div>
                 </div>
-                
             </div>
         </div>
     </body>
