adding pokemon type icon

--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
                         <p class="wind">10 mph</p>
                         <p>Wind Speed</p>
                         </div>
+                        <div class="col">
+                            <img src="/images/windspeed.png">
+                            <p class="type">Fighting</p>
+                            <p>Pokemon type out</p>
+                            </div>
                 </div>
             </div>
         </div>
