pokemon type placeholder

--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
                         <p>Wind Speed</p>
                         </div>
                         <div class="col">
-                            <img src="/images/windspeed.png">
-                            <p class="type">Fighting</p>
-                            <p>Pokemon type out</p>
+                            <img src="/images/grass.jpg">
+                            <img src="/images/ground.jpg">
+                            <img src="/images/fire.jpg">
+                            <p class="type">Grass, Ground, Fire</p>
+                            <p>Pokemon types out</p>
                             </div>
                 </div>
             </div>
