--- a/index.html
+++ b/index.html
@@ -9,27 +9,27 @@
         <div class="card">
             <div class="search">
                 <input type="text" placeholder="Enter city name" spellcheck="false">
-                <button> <img src="images/search.png"></button> 
+                <button> <img src="images/search.png" width="40" height="40"></button> 
             </div>
             <div class="weather">
-                <img src="images/clear.png" class="weather-icon">
+                <img src="images/clear.png" width="100" height="100" class="weather-icon">
                 <h1 class="temp">46°F</h1>
                 <h2 class="city">Paso Robles</h2>
                 <div class="details">
                     <div class="col">
-                    <img src="/images/humidity.png">
+                    <img src="/images/humidity.png" width="100" height="100">
                     <p class="humidity">50%</p>
                     <p>Humidity</p>
                     </div>
                     <div class="col">
-                        <img src="/images/windspeed.png">
+                        <img src="/images/windspeed.png" width="100" height="100">
                         <p class="wind">10 mph</p>
                         <p>Wind Speed</p>
                         </div>
                         <div class="col">
-                            <img src="/images/grass.jpg">
-                            <img src="/images/ground.jpg">
-                            <img src="/images/fire.jpg">
+                            <img src="/images/grass.jpg" width="100" height="100">
+                            <img src="/images/ground.jpg" width="100" height="100">
+                            <img src="/images/fire.jpg" width="100" height="100">
                             <p class="type">Grass, Ground, Fire</p>
                             <p>Pokemon types out</p>
                             </div>
